--- a/pages/EmployeePayrollApp.html
+++ b/pages/EmployeePayrollApp.html
@@ -7,54 +7,89 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap">
     <title>Employee Payroll Form</title>
     <link rel="stylesheet" href="../css/EmployeePayrollApp.css">
-    <link rel="stylesheet" href="../javascript/EmployeePayrollApp.js">
+   
 </head>
 <body>
     <!-- UC1 : Add logo -->
    <header class="header-content header">
-    <div class="logo-content">
-        <img src="../assets/images/logo.png"  alt="logo">
-        <div>
-            <span class="emp-text">Employee</span><br>
-            <span class="emp-text emp-payroll">Payroll</span>
-        </div>
-    </div>
-</header> 
-<!-- UC3 specify the profile pic in the form-->
-<div class="form-content">
- <div class="form" action="#" onsubmit="save();return false">
-     <div class="form-head">Employee Payroll form </div>
-       <div class="row-content">
-         <label class="label text" for="name">Name</label>
-         <input class="input" type="text" id="name" name="name" placeholder="Your name.." required>
+       <div class="logo-content">
+           <img src="../assets/images/logo.png"  alt="logo">
+           <div>
+               <span class="emp-text">Employee</span><br>
+               <span class="emp-text emp-payroll">Payroll</span>
+           </div>
        </div>
-       <div class="row-content">
-         <label for="profile" class="lable text">Profile image</label>
-         <div class="profile-radio-content">
-             <label>
-                 <input type="radio" id="profile1" name="profile" 
-                     value="../assets/profile-images/Ellipse -10.png" required>
-                 <img class="profile" id="image1" src="../assets/profile-images/Ellipse -10.png" alt="profile1">
-             </label>
-             <label>
-                 <input type="radio" id="profile2" name="profile" 
-                     value="../assets/profile-images/Ellipse -2.png" required>
-                 <img class="profile" id="image2" src="../assets/profile-images/Ellipse -2.png"  alt="profile2">
-             </label>
-             <label>
-                 <input type="radio" id="profile3" name="profile" 
-                     value="../assets/profile-images/Ellipse -3.png" required>
-                 <img class="profile" id="image3" src="../assets/profile-images/Ellipse -3.png"  alt="profile3">
-             </label>
-             <label>
-                 <input type="radio" id="profile4" name="profile" 
-                     value="../assets/profile-images/Ellipse -1.png" required>
-                 <img class="profile" id="image4" src="../assets/profile-images/Ellipse -1.png"  alt="profile4">
-             </label>
-         </div>
-     </div>
- </form>
+   </header> 
+
+   <!-- UC3 specify the profile pic in the form-->
+   <div class="form-content">
+    <div class="form" action="#" onsubmit="save();return false">
+        <div class="form-head">Employee Payroll form </div>
+          <div class="row-content">
+            <label class="label text" for="name">Name</label>
+            <input class="input" type="text" id="name" name="name" placeholder="Your name.." required>
+          </div>
+          <div class="row-content">
+            <label for="profile" class="lable text">Profile image</label>
+            <div class="profile-radio-content">
+                <label>
+                    <input type="radio" id="profile1" name="profile" 
+                        value="../assets/profile-images/Ellipse -10.png" required>
+                    <img class="profile" id="image1" src="../assets/profile-images/Ellipse -10.png" alt="profile1">
+                </label>
+                <label>
+                    <input type="radio" id="profile2" name="profile" 
+                        value="../assets/profile-images/Ellipse -2.png" required>
+                    <img class="profile" id="image2" src="../assets/profile-images/Ellipse -2.png"  alt="profile2">
+                </label>
+                <label>
+                    <input type="radio" id="profile3" name="profile" 
+                        value="../assets/profile-images/Ellipse -3.png" required>
+                    <img class="profile" id="image3" src="../assets/profile-images/Ellipse -3.png"  alt="profile3">
+                </label>
+                <label>
+                    <input type="radio" id="profile4" name="profile" 
+                        value="../assets/profile-images/Ellipse -1.png" required>
+                    <img class="profile" id="image4" src="../assets/profile-images/Ellipse -1.png"  alt="profile4">
+                </label>
+            </div>
+        </div>
+
+         <!-- UC4: Gender ,department, Salary -->
+         <div class="row-content">
+            <label class="label text" for="gender">Gender</label>
+            <div>
+                <input type="radio" id="male" name="gender" value="male">
+                <label class="text" for="male">Male</label>
+                <input type="radio" id="female" name="gender" value="female">
+                <label class="text" for="female">Female</label>
+            </div>
+        </div>
+        
+        <div class="row-content">
+            <label class="label text" for="department">Department</label>
+            <div>
+                <input class="checkbox" type="checkbox" id="hr" name="hr" value="HR">
+                <label class="text" for="hr">HR</label>
+                <input class="checkbox" type="checkbox" id="sales" name="sales" value="Sales">
+                <label class="text" for="sales">Sales</label>
+                <input class="checkbox" type="checkbox" id="finance" name="finance" value="Finance">
+                <label class="text" for="finance">Finance</label>
+                <input class="checkbox" type="checkbox" id="engineer" name="engineer" value="Engineer">
+                <label class="text" for="engineer">Engineer</label>
+                <input class="checkbox" type="checkbox" id="others" name="others" value="Others">
+                <label class="text" for="others">Others</label>
+            </div>
+        </div>
+
+        <div class="row-content">
+            <label class="label text" for="salary">Choose your Salary: </label>
+            <input class="input" type="range" id="salary" name="salary" min="300000" max="500000" step="100"
+                value="400000">
+            <output class="salary-output text" for="salary">400000</output>
+        </div>
+    </form>
 </div>
-<link rel="stylesheet" href="../">
+<link rel="stylesheet" href="../javascript/EmployeePayrollApp.js">
 </body>
 </html>
