--- a/pages/EmployeePayrollApp.html
+++ b/pages/EmployeePayrollApp.html
@@ -148,6 +148,7 @@
                 <option value="2016">2016</option>
              </select>
         </div>
+        </div>
          <!----UC6---->
        <div class="row-content">
            <label class="label text" for="notes">Notes</label>
@@ -160,6 +161,7 @@
             <button type="reset" class="resetButton button">Reset</button>
         </div>
      </div>
+     
     </form>
    </div>
   <link rel="stylesheet" href="../javascript/EmployeePayrollApp.js">
