ADDED:populating the employee payroll data object

--- a/pages/EmployeePayrollApp.html
+++ b/pages/EmployeePayrollApp.html
@@ -165,5 +165,6 @@
     </form>
    </div>
   <link rel="stylesheet" href="../javascript/EmployeePayrollApp.js">
+  <link rel="stylesheet" href="../javascript/EmployeePayrollData.js">
 </body>
 </html>
