--- a/pages/EmployeePayrollApp.html
+++ b/pages/EmployeePayrollApp.html
@@ -20,15 +20,16 @@
            </div>
        </div>
    </header> 
-
-   <!-- UC3 specify the profile pic in the form-->
-   <div class="form-content">
-    <div class="form" action="#" onsubmit="save();return false">
+ <!-- UC2: -->
+   <div id="formId" class="form-content">
+    <div class="form" action="#" onreset="resetForm()" onsubmit="save()">
         <div class="form-head">Employee Payroll form </div>
           <div class="row-content">
             <label class="label text" for="name">Name</label>
             <input class="input" type="text" id="name" name="name" placeholder="Your name.." required>
+            <error-output class="text-error" for="text"></error-output>
           </div>
+        <!-- UC3: Profile pic-->
           <div class="row-content">
             <label for="profile" class="lable text">Profile image</label>
             <div class="profile-radio-content">
@@ -164,7 +165,7 @@
      
     </form>
    </div>
-  <link rel="stylesheet" href="../javascript/EmployeePayrollApp.js">
-  <link rel="stylesheet" href="../javascript/EmployeePayrollData.js">
-</body>
+  <script src="../javascript/EmployeePayrollApp.js"></script>
+  <script src="../javascript/EmployeePayrollData.js"></script>
+  </body>
 </html>
