--- a/pages/EmployeePayrollApp.html
+++ b/pages/EmployeePayrollApp.html
@@ -22,7 +22,7 @@
    </header> 
  <!-- UC2: -->
    <div id="formId" class="form-content">
-    <div class="form" action="#" onreset="resetForm()" onsubmit="save()">
+    <form class="form" action="#" onreset="resetForm()" onsubmit="save()">
         <div class="form-head">Employee Payroll form </div>
           <div class="row-content">
             <label class="label text" for="name">Name</label>
@@ -157,15 +157,15 @@
        </div>
        <div class="buttonParent">
            <a href="./home.html" class="resetButton button cancelButton">Cancel</a>
-       <div class="submit-reset">
+        <div class="submit-reset">
             <button type="submit" class="button submitButton" id="submitButton">Submit</button>
             <button type="reset" class="resetButton button">Reset</button>
         </div>
      </div>
-     
     </form>
    </div>
-  <script src="../javascript/EmployeePayrollApp.js"></script>
-  <script src="../javascript/EmployeePayrollData.js"></script>
-  </body>
+  
+ <script src="../javascript/EmployeePayrollApp.js"></script>
+ <script src="../javascript/EmployeePayrollData.js"></script>
+</body>
 </html>
