ADDED:created header section and employee button

--- a/pages/NewEmployeePayrollHome.html
+++ b/pages/NewEmployeePayrollHome.html
@@ -13,11 +13,22 @@
 <body>
     <header class="header-content header">
         <div class="logo-content">
-            <img src="../assets/images/logo.png" alt="logo">
+            <img src="../assets/images/logo.png" width="60px" alt="logo">
         </div>
         <span class="emp-text">Employee</span>
         <span class="emp-text emp-payroll">Payroll</span>
     </header>
+    <div class="main-content">
+        <!-- UC 2 -->
+        <div class="header-content">
+            <div class="emp-detail-text">
+                Employee Details
+                <div class="emp-count">10</div>
+            </div>
+            <a href="../pages/NewEmployeePayrollHome.html" class="add-button">
+            <img src="../assets/icons/add-24px.svg" alt="">Add User</a>
+        </div> <!--header-content-->
+    </div>
 </body>
 <script src="../javascript/NewEmployeePayroll.js"></script>
 </html>
