ADDED: Used template litearal feature

--- a/pages/NewEmployeePayrollHome.html
+++ b/pages/NewEmployeePayrollHome.html
@@ -28,6 +28,11 @@
             <a href="../pages/NewEmployeePayrollHome.html" class="add-button">
             <img src="../assets/icons/add-24px.svg" alt="">Add User</a>
         </div> <!--header-content-->
+        <div class="table-main">
+            <table id="display" class="table">
+               
+         </table>
+        </div>
     </div>
 </body>
 <script src="../javascript/NewEmployeePayroll.js"></script>
