--- a/pages/NewEmployeePayrollHome.html
+++ b/pages/NewEmployeePayrollHome.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,8 +16,10 @@
         <div class="logo-content">
             <img src="../assets/images/logo.png" width="60px" alt="logo">
         </div>
-        <span class="emp-text">Employee</span>
+        <div class="text-name">
+        <span class="emp-text"> Employee</span>
         <span class="emp-text emp-payroll">Payroll</span>
+    </div>
     </header>
     <div class="main-content">
         <!-- UC 2 -->
@@ -25,7 +28,7 @@
                 Employee Details
                 <div class="emp-count">10</div>
             </div>
-            <a href="../pages/NewEmployeePayrollHome.html" class="add-button">
+            <a href="../pages/EmployeePayrollApp.html" target="_blank" class="add-button">
             <img src="../assets/icons/add-24px.svg" alt="">Add User</a>
         </div> <!--header-content-->
         <div class="table-main">
