--- a/pages/NewEmployeePayrollHome.html
+++ b/pages/NewEmployeePayrollHome.html
@@ -1,4 +1,3 @@
-  
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -39,4 +38,5 @@
     </div>
 </body>
 <script src="../javascript/NewEmployeePayroll.js"></script>
+<script src="../javascript/Utility.js"></script>
 </html>
