--- a/pages/EmployeePayrollApp.html
+++ b/pages/EmployeePayrollApp.html
@@ -27,7 +27,7 @@
         <div class="form-head">Employee Payroll form </div>
           <div class="row-content">
             <label class="label text" for="name">Name</label>
-            <input class="input" type="text" id="name" name="name" placeholder="Your name.." required>
+            <input class="input" type="text" id="name" name="name"  placeholder="Your name.." required>
             <error-output class="text-error" for="text"></error-output>
           </div>
         <!-- UC3: Profile pic-->
@@ -167,6 +167,8 @@
    </div>
    <script src="../javascript/EmployeePayrollApp.js"></script>
    <script src="../javascript/EmployeePayrollData.js"></script>
+   <script src="../javascript/NewEmployeePayroll.js"></script>
+   <script src="../javascript/Utility.js"></script>
+   <script src="../javascript/site_properties.js"></script>
 </body>
-
 </html>
